--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>CVup - Resume / CV / vCard Template</title>
+    <title>Profil Muh. SUkri Malendra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="CVup - Resume / CV / vCard Template" />
+    <meta name="description" content="Profil Muh. SUkri Malendra" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta name="author" content="lmpixels" />
     <link rel="shortcut icon" href="favicon.ico">
