--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Profil Muh. Sukri Malendra</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="CVup - Resume / CV / vCard Template" />
+    <meta name="description" content="Profil Muh. Sukri Malendra" />
     <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
     <meta name="author" content="lmpixels" />
     <link rel="shortcut icon" href="favicon.ico">
