--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                               <h4>Kaur Tata Usaha dan Umum</h4>
                             </div>
                             <div class="item">
-                              <h4>Frontend-developer</h4>
+                              <h4>Operator Data</h4>
                             </div>
                           </div>
 
