--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                       <div class="col-sm-12 col-md-6 col-lg-6">
                           <div class="home-photo">
-                              <div class="hp-inner" style="background-image: url(img/main_photo_1.jpg);" ></div>
+                              <div class="hp-inner" style="background-image: url(img/main_photo.jpg);" ></div>
                           </div>
                       </div>
                   </div>
