--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                           </div>
 
                           <h1>Muh. Sukri Malendra</h1>
-                          <p>Fusce tempor magna mi, non egestas velit ultricies nec. Aenean convallis, risus non condimentum gravida, odio mauris ullamcorper felis, ut venenatis purus ex eu mi. Quisque imperdiet lacinia urna, a placerat sapien.</p>
+                          <p>Saat ini saya bekerja di Kantor Desa Pelangan dengan jabatan Kepala Urusan Tata Usaha dan Umum. Sebagai Staf, saya melakukan banyak pekerjaan seperti Menyiapkan Administrasi Rapat, melakukan Inventaris Barang, bahkan membuat Surat Kedinasan, melakukan pendataan, ikut andil dan ambil bagian pada pertemuan rapat desa. Bekerja pada bidang Administrasi memang cukup sulit, tapi saya suka dan senang menjalaninya. Sekian perkenalan dari saya. Terima kasih.</p>
                           
                           <div class="home-buttons">
                             <a href="https://themeforest.net/item/leven-vcard-wordpress-theme/25289671" target="_blank" class="btn btn-primary">Download CV</a>
